[package]
name = "asteroid"
version = "0.1.0"
authors = ["Brighton Sikarskie <brighton.sikarskie@tuta.io>"]
edition = "2018"
description = "A simple GUI rust asteroid game"
readme = "README.md"
homepage = "https://github.com/bsikar/asteroid"
repository = "https://github.com/bsikar/asteroid"
license = "MIT"
keywords = ["gamedev", "graphics", "game", "gui"]
categories = ["games"]

[dependencies]
bevy = "0.5.0"
